<resources>
    <string name="app_name">Composition</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="composition_label">Состав числа</string>
    <string name="game_rules">
        Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут
        числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре,
        для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном из
        нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть
        число 3, потому что 3 + 4 = 7
    </string>
    <string name="understand_button">ПОНЯТНО</string>
    <string name="choose_level_label">Выберите уровень:</string>
    <string name="test_level_button">ТЕСТОВЫЙ</string>
    <string name="easy_level_button">ЛЕГКИЙ</string>
    <string name="medium_level_button">СРЕДНИЙ</string>
    <string name="hard_level_button">СЛОЖНЫЙ</string>
    <string name="answer_progress_label">Правильных ответов %s (минимум %s)</string>
    <string name="question_mark">\?</string>
    <string name="game_over">Game over</string>
    <string name="required_answer">Необходимое количество ответов: %s</string>
    <string name="your_score">Ваш счёт: %s</string>
    <string name="required_percent">Необходимый процент правильных ответов: %s</string>
    <string name="your_percent">Процент правильных ответов: %s</string>
    <string name="try_again">ПОПРОБОВАТЬ СНОВА</string>
</resources>