<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:contentDescription="@string/welcome_logo"
            android:src="@drawable/ic_brain" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/composition_label"
            android:textAlignment="center"
            android:textSize="45sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:text="@string/game_rules"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonUnderstand"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/holo_blue_light"
            android:padding="20dp"
            android:text="@string/understand_button"
            android:textSize="30sp" />
    </LinearLayout>
</ScrollView>